@@ -1,7 +1,12 @@
 package c207.camference.api.service.fireStaff;
 
+import c207.camference.api.request.dispatchstaff.DispatchRequest;
+import c207.camference.api.request.dispatchstaff.TransferUpdateRequest;
+import c207.camference.api.request.patient.PatientInfoRequest;
 import c207.camference.api.response.common.ResponseData;
 import c207.camference.api.response.dispatchstaff.AvailableHospitalResponse;
+import c207.camference.api.response.dispatchstaff.FinishDispatchResponse;
+import c207.camference.api.response.dispatchstaff.TransferUpdateResponse;
 import c207.camference.api.response.hospital.ReqHospitalResponse;
 import c207.camference.api.response.report.DispatchDetailResponse;
 import c207.camference.api.response.report.DispatchResponse;
@@ -11,7 +16,6 @@ import c207.camference.db.entity.firestaff.DispatchGroup;
 import c207.camference.db.entity.firestaff.DispatchStaff;
 import c207.camference.db.entity.firestaff.FireStaff;
 import c207.camference.db.entity.hospital.Hospital;
-import c207.camference.db.entity.hospital.ReqHospital;
 import c207.camference.db.entity.patient.Patient;
 import c207.camference.db.entity.report.Dispatch;
 import c207.camference.db.entity.report.Transfer;
@@ -30,7 +34,6 @@ import com.fasterxml.jackson.databind.JsonNode;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import jakarta.persistence.EntityNotFoundException;
 import lombok.RequiredArgsConstructor;
-import org.json.JSONArray;
 import org.json.JSONObject;
 import org.json.XML;
 import org.modelmapper.ModelMapper;
@@ -39,13 +42,14 @@ import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 
 import java.net.HttpURLConnection;
 import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
+import java.time.LocalDateTime;
 import java.util.*;
 import java.util.stream.Collectors;
-
-import static io.openvidu.java.client.ConnectionProperties.DefaultValues.data;
 
 @Service
 @RequiredArgsConstructor
@@ -69,6 +73,7 @@ public class DispatchStaffServiceImpl implements DispatchStaffService {
     private String availableHospitalUrl;
 
 
+    @Transactional
     @Override
     public ResponseEntity<?> getReports(){
         try{
@@ -121,6 +126,8 @@ public class DispatchStaffServiceImpl implements DispatchStaffService {
 
 
     }
+
+    @Transactional
     @Override
     public ResponseEntity<?> dispatchDetail(int dispatchId){
         try{
@@ -145,6 +152,7 @@ public class DispatchStaffServiceImpl implements DispatchStaffService {
 
     }
 
+    @Transactional
     @Override
     public ResponseEntity<?> transferDetail(int transferId){
         try{
@@ -171,6 +179,7 @@ public class DispatchStaffServiceImpl implements DispatchStaffService {
 
     }
 
+    @Transactional
     @Override
     public ResponseEntity<?> getReqHospital(int dispatchId){
         try{
@@ -191,17 +200,19 @@ public class DispatchStaffServiceImpl implements DispatchStaffService {
             ResponseData<Void> response = ResponseUtil.fail(500, "서버 오류가 발생했습니다: " + e.getMessage());
             return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR).body(response);
         }
-    };
+    }
 
-    public List<AvailableHospitalResponse> getAvailableHospital(String siDo, String siGunGu) {
+    @Transactional
+    @Override
+    public ResponseEntity<?> getAvailableHospital(String siDo, String siGunGu) {
         List<AvailableHospitalResponse> responses = new ArrayList<>();
         HttpURLConnection urlConnection = null;
 
         try {
             String urlStr = availableHospitalUrl +
                     "?ServiceKey=" + serviceKey +  // serviceKey는 인코딩하지 않음
-                    "&STAGE1=" + URLEncoder.encode(siDo, "UTF-8") +
-                    "&STAGE2=" + URLEncoder.encode(siGunGu, "UTF-8") +
+                    "&STAGE1=" + URLEncoder.encode(siDo, StandardCharsets.UTF_8) +
+                    "&STAGE2=" + URLEncoder.encode(siGunGu, StandardCharsets.UTF_8) +
                     "&numOfRows=" + 100;
 
             String response = OpenApiUtil.getHttpResponse(urlStr);
@@ -227,7 +238,8 @@ public class DispatchStaffServiceImpl implements DispatchStaffService {
 
                 responses.add(availableHospitalResponse);
             }
-            return responses;
+            return ResponseEntity.ok().body(ResponseUtil.success(responses, "가용 가능한 응급실 조회 성공"));
+
 
         } catch (Exception e) {
             throw new RuntimeException("병원 정보 조회 중 오류 발생", e);
@@ -238,4 +250,68 @@ public class DispatchStaffServiceImpl implements DispatchStaffService {
         }
     }
 
+    @Override
+    @Transactional
+    public ResponseEntity<?> transferUpdate(TransferUpdateRequest request) {
+        Transfer transfer = transferRepository.findByTransferId(request.getTransferId())
+                .orElseThrow(() -> new RuntimeException("일치하는 이송 내역이 없습니다."));
+
+        transfer.setTransferIsComplete(true);
+        transfer.setTransferArriveAt(LocalDateTime.now());
+        transferRepository.save(transfer);
+
+        TransferUpdateResponse response = new TransferUpdateResponse(transfer);
+
+        return ResponseEntity.ok().body(ResponseUtil.success(response, "병원 인계여부 수정 성공"));
+    }
+
+    @Override
+    @Transactional
+    public ResponseEntity<?> updatePatientInfo(PatientInfoRequest request){
+
+        try{
+            Patient patient = patientRepository.findById(request.getPatientId())
+                    .orElseThrow(()->new EntityNotFoundException("환자 정보가 없습니다."));
+
+
+            ModelMapper modelMapper = new ModelMapper();
+            modelMapper.getConfiguration().setSkipNullEnabled(true);
+
+            // 요청 객체에서 null이 아닌 필드만 user 객체에 업데이트
+            modelMapper.map(request, patient);
+
+            patientRepository.saveAndFlush(patient);
+
+
+            Map<String, Integer> data = new HashMap<>();
+            data.put("patientId", patient.getPatientId());
+
+            ResponseData<Map<String, Integer>> response = ResponseUtil.success(data, "환자 정보변경 완료");
+            return ResponseEntity.status(HttpStatus.OK).body(response);
+
+
+        } catch (EntityNotFoundException e) {
+            System.out.println("EntityNotFoundException: " + e.getMessage());
+            ResponseData<Void> response = ResponseUtil.fail(404, e.getMessage());
+            return ResponseEntity.status(HttpStatus.NOT_FOUND).body(response);
+        } catch (Exception e) {
+            System.out.println("Exception: " + e.getMessage());
+            e.printStackTrace();
+            ResponseData<Void> response = ResponseUtil.fail(500, "서버 오류가 발생했습니다: " + e.getMessage());
+            return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR).body(response);
+        }
+    }
+
+    @Override
+    @Transactional
+    public ResponseEntity<?> finishDispatch(DispatchRequest request) {
+        Dispatch dispatch = dispatchRepository.findById(request.getDispatchId())
+                .orElseThrow(() -> new RuntimeException("일치하는 출동 정보가 없습니다."));
+
+        dispatch.getDispatchGroup().setDispatchGroupIsReady(true);
+        dispatch.setDispatchArriveAt(LocalDateTime.now());
+
+        FinishDispatchResponse response = new FinishDispatchResponse(dispatch, dispatch.getDispatchGroup());
+        return ResponseEntity.ok().body(ResponseUtil.success(response, "현장에서 상황 종료"));
+    }
 }
